--- a/Delegates/Delegates.csproj
+++ b/Delegates/Delegates.csproj
@@ -34,6 +34,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PhotoFilter.cs" />
+    <Compile Include="Photo.cs" />
+    <Compile Include="PhotoProcessor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
