--- a/EventsAndDelegates/EventsAndDelegates.csproj
+++ b/EventsAndDelegates/EventsAndDelegates.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Video.cs" />
     <Compile Include="VideoEncoder.cs" />
+    <Compile Include="MailService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
