--- a/EventsAndDelegates/EventsAndDelegates.csproj
+++ b/EventsAndDelegates/EventsAndDelegates.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Video.cs" />
     <Compile Include="VideoEncoder.cs" />
     <Compile Include="MailService.cs" />
+    <Compile Include="WhatsAppService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
