Adding YouTube Exceptions

--- a/ExceptionHandling/ExceptionHandling.csproj
+++ b/ExceptionHandling/ExceptionHandling.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Calculator.cs" />
     <Compile Include="YouTubeApi.cs" />
+    <Compile Include="YouTubeException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
